--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ GITHUB_CLIENT_ID=bcdec22dbeb35ac9c2e7
 GITHUB_CLIENT_SECRET=38ed1ec630ac0ad42971d9abbb6b272e961f8c3c
 NEXTAUTH_URL=http://localhost:3000
 SECRET_KEY=secret
+
+#DATABASE
+MONGODB_URL=mongodb+srv://eshonkulovnodirbek:Xa0uWX10n9Ss6wdX@cluster0.5fttbss.mongodb.net/?retryWrites=true&w=majority
